[project]
name = "agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "uvicorn>=0.46.0",
]
